# pythonlings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  RELEASE.md  Readme.md  info.toml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml  publish.yml
checks/pathlib/: pathlib2.py
docs/: DEMO_GIF.md  RELEASE_PROCESS.md  demo.tape
docs-site/: CNAME  contributing.md  curriculum.md  faq.md  how-it-works.md  index.md  interface.md  local-docs.md  quick-start.md  roadmap.md  robots.txt
docs-site/stylesheets/: extra.css
docs/roadmap/: 0.3.0.md
docs/superpowers/plans/: 2026-06-20-docs-site-overhaul.md  2026-06-20-zero-config-first-run.md
docs/superpowers/specs/: 2026-06-20-docs-site-overhaul-design.md  2026-06-20-zero-config-first-run-design.md
exercises/json/: json5.py  json8.py
exercises/pathlib/: pathlib2.py
pythonlings/: __main__.py  app.py  cli.py  pythonlings.tcss
pythonlings/core/: curriculum.py  docs.py  exercise.py  manifest.py  reset.py  runner.py  solutions.py  state.py  workspace.py
pythonlings/docs/: NOTICE.md  __init__.py  index.json
pythonlings/docs/topics/: __init__.py  async.md  classes.md  collections.md  comprehensions.md  conditionals.md  context_managers.md  dataclasses.md  datetime.md  decorators.md  dictionaries.md  enums.md  exceptions.md  file_io.md  functional.md  (+17 more)
pythonlings/screens/: docs.py  topic_picker.py  track.py  welcome.py
pythonlings/widgets/: editor_pane.py  exercise_tree.py  output_panel.py  progress.py
scripts/: fetch_python_docs.py  generate_demo_gif.sh
solutions/: _answers.py
tests/: conftest.py
tests/integration/: test_cli_cold_start.py  test_cli_dry_run.py  test_cli_hint.py  test_cli_reset.py  test_cli_run.py  test_cli_solution.py  test_cli_topics.py  test_cli_verify.py  test_cli_workspace.py  test_first_run.py  test_installed_package.py  test_solution_verify.py
tests/tui/: test_app_pilot.py  test_editor_pane.py  test_output_panel.py  test_welcome_pilot.py
tests/unit/: test_celebration.py  test_curriculum.py  test_docs.py  test_exercise.py  test_manifest.py  test_progress.py  test_reset.py  test_runner.py  test_state.py  test_welcome.py  test_workspace.py
